# odas2

./: README.md
core/: CMakeLists.txt
core/demo/: demo_delaysum.c  demo_doas.c  demo_enhance.c  demo_mix.c  demo_mvdr.c  demo_rec.c  demo_spex.c  demo_steer.c  demo_tdoas.c  demo_wave.c
core/doxygen/: Doxyfile
core/examples/: example_ssl.c
core/include/: CMakeLists.txt
core/include/odas2/dnns/: functionals.h  layers.h  tensors.h
core/include/odas2/ios/: msg.h  raw.h  wav.h
core/include/odas2/signals/: covs.h  doas.h  freqs.h  hops.h  masks.h  tdoas.h  weights.h
core/include/odas2/systems/: beamformer.h  delaysum.h  enhancement.h  fcc.h  gcc.h  mixer.h  mvdr.h  phat.h  postfilter.h  scm.h  ssl.h  steering.h  stft.h
core/include/odas2/types/: cplx.h  xyz.h
core/include/odas2/utils/: fft.h  linalg.h  mics.h  points.h  ring.h
core/src/dnns/: functionals.c  layers.c  tensors.c
core/src/ios/: msg.c  raw.c  wav.c
core/src/signals/: covs.c  doas.c  freqs.c  hops.c  masks.c  tdoas.c  weights.c
core/src/systems/: beamformer.c  delaysum.c  enhancement.c  fcc.c  gcc.c  mixer.c  mvdr.c  phat.c  postfilter.c  scm.c  ssl.c  steering.c  stft.c
core/src/types/: cplx.c  xyz.c
core/src/utils/: fft.c  linalg.c  mics.c  points.c  ring.c
core/test/: tests.c
core/test/units/: test_beamformer.c  test_beamformer.h  test_cplx.c  test_cplx.h  test_delaysum.c  test_delaysum.h  test_fft.c  test_fft.h  test_gcc.c  test_gcc.h  test_linalg.c  test_linalg.h  test_mics.c  test_mics.h  test_mixer.c  test_mixer.h  test_mvdr.c  test_mvdr.h  test_phat.c  test_phat.h  test_points.c  test_points.h  test_ring.c  test_ring.h  test_scm.c  test_scm.h  test_ssl.c  test_ssl.h  test_steering.c  test_steering.h  test_stft.c  test_stft.h  test_xyz.c  test_xyz.h
core/tools/: buffer.c
interface/: plot.py
